--- a/React/状态管理.md
+++ b/React/状态管理.md
@@ -1,3 +1,6 @@
 ### redux工作流
+- 用户通过view发出dispatch一个action
+- store会自动调用reducer，reducer 会接收当前的 state 和 action ，返回一个新的 state
+- state更新，store就会调用监听函数，更新view
 
 ### redux 和 mobx
