add(设计模式):策略模式补充

--- a/JS高级/设计模式.md
+++ b/JS高级/设计模式.md
@@ -159,6 +159,61 @@ bonus.setSalary( 1000 );
 bonus.setStrategy( new performanceA() );
 bonus.getBonus(); // 6000
 ```
+<br>
+
+我们可以看到，在上面的例子中我们将各个计算奖金算法封装成`一个个策略类`，Bonus的`所有请求`都最终`被委托给具体的策略类`去处理，可以看到通过策略模式重构之后，代码变得更加清晰，各个类的职责更加鲜明。但实际上我们知道上面的类似也是基于强类型语言，对于JavaScript这样灵活的语言，我们并不需要这么麻烦。
+
+<br>
+
+``` js
+const strategies = {
+    "A": function( salary ){
+        return salary * 6;
+    },
+    "B": function( salary ){
+        return salary * 3;
+    },
+    "C": function( salary ){
+        return salary * 1;
+    }
+};
+function calculateBonus ( level, salary ){
+    return strategies[ level ]( salary );
+};
+ 
+console.log( calculateBonus( 'A', 1000 ) );     // 6000
+```
+
+<br>
+
+甚至因为JavaScript中函数作为一等公民，我们整个的程序可以退化为:
+
+<br>
+
+``` js
+const A = function( salary ){
+   return salary * 6;
+};
+ 
+ 
+const B = function( salary ){
+   return salary * 3;
+};
+ 
+const C = function( salary ){
+    return salary * 1;
+ };
+ 
+const calculateBonus = function( func, salary ){
+   return func( salary );
+};
+ 
+calculateBonus( A, 1000  );    // 6000
+```
+
+<br>
+
+
 
 <br>
 <hr>
