add(js):this 指向

--- a/JS高级/设计模式.md
+++ b/JS高级/设计模式.md
@@ -73,13 +73,19 @@
 
 <br>
 
-> 定义一系列的算法，把它们一个个封装起来，并且使它们可以相互替换。
+> 定义一系列的算法，把它们一个个`封装`起来，并且使它们可以相互替换。
 
 <br>
 
 优点：
-- 策略模式提供了对开放-封闭原则的完美支持，将算法封装在独立的strategy中，使得它们易于切换，易于理解，易于复用、扩展及测试。
-- 可以有效地避免多重条件选择语句。
+- 策略模式提供了对`开放-封闭`原则的`完美支持`，将算法`封装在独立的strategy`中，使得它们易于切换，易于理解，易于复用、`扩展及测试`。
+- 可以有效地`避免`多重条件选择语句。
+
+<br>
+
+缺点：
+- 策程序中`增加`了较多的`策略类和策略对象`
+- 使用者需要必须`掌握`所有策略算法，才能从各种策略算法中找到`最合适`的策略算法，这是`违反知识最少原则`的
 
 <br>
 
@@ -106,11 +112,11 @@ calculateBonus('C', 1000) // 1000
 ```
 <br>
 
-calculateBonus函数确实实现了我们的需求，但是也存在非常多显而易见的缺点。
+`calculateBonus`函数确实实现了我们的需求，但是也存在非常多显而易见的`缺点`。
 
-首先，calculateBonus充斥着大量的if、else语句，阅读性和维护性很差，并且不易扩展。
+首先，calculateBonus充斥着大量的`if、else语句，阅读性`和`维护性`很差，并且`不易扩展`。
 
-例如假设我们现在要增加一个S级的年终奖，用来表彰那种贡献卓越的员工12个月年终奖，那么我们不得不深入calculateBonus内部去修改，这明显是违反开闭原则的。并且如果现在我们想要调整A级的年终奖变成7个月，也不得不深入calculateBonus函数内部做修改。
+例如假设我们现在要`增加`一个S级的年终奖，用来表彰那种贡献卓越的员工12个月年终奖，那么我们`不得不深入calculateBonus内部`去修改，这明显是`违反开闭原则`的。并且如果现在我们想要调整A级的年终奖变成7个月，也不得不深入calculateBonus函数内部做修改。
 
 这个时候，我们就可以借用策略模式来重新我们的算法：
 
@@ -161,7 +167,7 @@ bonus.getBonus(); // 6000
 ```
 <br>
 
-我们可以看到，在上面的例子中我们将各个计算奖金算法封装成`一个个策略类`，Bonus的`所有请求`都最终`被委托给具体的策略类`去处理，可以看到通过策略模式重构之后，代码变得更加清晰，各个类的职责更加鲜明。但实际上我们知道上面的类似也是基于强类型语言，对于JavaScript这样灵活的语言，我们并不需要这么麻烦。
+我们可以看到，在上面的例子中我们将各个计算奖金算法封装成`一个个策略类`，Bonus的`所有请求`都最终`被委托给具体的策略类`去处理，可以看到通过策略模式重构之后，代码变得更加清晰，各个类的`职责更加鲜明`。但实际上我们知道上面的类似也是基于强类型语言，对于JavaScript这样灵活的语言，我们并不需要这么麻烦。
 
 <br>
 
@@ -186,7 +192,7 @@ console.log( calculateBonus( 'A', 1000 ) );     // 6000
 
 <br>
 
-甚至因为JavaScript中函数作为一等公民，我们整个的程序可以退化为:
+甚至因为JavaScript中`函数`作为一等公民，我们整个的程序可以退化为:
 
 <br>
 
@@ -220,6 +226,26 @@ calculateBonus( A, 1000  );    // 6000
 <br>
 
 #### 职责链模式
+
+<br>
+
+> 多个对象均有机会处理请求，从而解除发送者和接受者之间的耦合关系。这些对象连接成为链式结构，每个节点转发请求，直到有对象处理请求为止。
+
+<br>
+
+优点：
+- 可以根据需求变动，任意向责任链中添加 / 删除节点对象。
+- 没有固定的“开始节点”，可以从任意节点开始。
+
+<br>
+
+缺点：
+- 每个节点带来的多余消耗。当责任链过长，很多节点只有传递的作用，而不是真正地处理逻辑。
+
+<br>
+
+
+
 
 <br>
 <hr>
