--- a/职业规划/2021.md
+++ b/职业规划/2021.md
@@ -12,18 +12,18 @@
 <br>
 
 <img src="./images/1.png" />
+<img src="./images/研发架构.png" />
 
 <br>
 
 <br>
 
 - 源码学习
-    - react
-    - react-router
-    - redux
-    - @type/系列
-    - antd rc/系列
-    
+  - react
+  - react-router
+  - redux
+  - @type/系列
+  - antd rc/系列
 - 组件库搭建
 - Flutter
 - Electron
