--- a/职业规划/前端技术能力标准(不断更新).md
+++ b/职业规划/前端技术能力标准(不断更新).md
@@ -7,6 +7,8 @@
  * @FilePath: /technology-stack/职业规划/前端技术能力标准(不断更新).md
 -->
 
+[阮神的招聘 issues，持续更新](https://github.com/ruanyf/weekly/issues/1784)
+
 1.了解/掌握/精通 JavaScript
 初级:
 
