--- a/React/状态管理.md
+++ b/React/状态管理.md
@@ -1,6 +1,11 @@
-### redux工作流
-- 用户通过view发出dispatch一个action
-- store会自动调用reducer，reducer 会接收当前的 state 和 action ，返回一个新的 state
-- state更新，store就会调用监听函数，更新view
+### redux 工作流
+
+- 用户通过 view 发出 dispatch 一个 action
+- store 会自动调用 reducer，reducer 会接收当前的 state 和 action ，返回一个新的 state
+- state 更新，store 就会调用监听函数，更新 view
+
+### redux 和 react-redux
+
+### redux-thunk 和 redux-saga
 
 ### redux 和 mobx
