--- a/浏览器/渲染.md
+++ b/浏览器/渲染.md
@@ -1,46 +1,58 @@
-### 浏览器渲染 html dom树 css om树 render树
-
-
-
+### 浏览器渲染 html dom 树 css om 树 render 树
 
 ### 什么是重绘、回流，如何优化？
+
 > 一般来说，回流一定会导致重绘
 
-1. 浏览器会把HTML解析成DOM，把CSS解析成CSSOM，DOM和CSSOM合并就产生了Render Tree。
-2. 有了RenderTree，我们就知道了所有节点的样式，然后计算他们在页面上的大小和位置，最后把节点绘制到页面上。
+1. 浏览器会把 HTML 解析成 DOM，把 CSS 解析成 CSSOM，DOM 和 CSSOM 合并就产生了 Render Tree。
+2. 有了 RenderTree，我们就知道了所有节点的样式，然后计算他们在页面上的大小和位置，最后把节点绘制到页面上。
 
 #### 回流
-> 当Render Tree中部分或全部元素的尺寸、结构、或某些属性发生改变时，浏览器重新渲染部分或全部文档的过程称为回流。
+
+> 当 Render Tree 中部分或全部元素的尺寸、结构、或某些属性发生改变时，浏览器重新渲染部分或全部文档的过程称为回流。
 
 ##### 导致回流的操作：
+
 - 浏览器的首次渲染
 - 浏览器的尺寸发生变化
 - 元素的尺寸，位置发生变化
 - 元素内容变化
 - 字体大小发生变化
-- 激活伪类
+- 激活伪类（例如：:hover）
 - 添加或者删除某些可见的元素
 - 查询某些属性或调用某些方法
 
+##### 一些常用且会导致回流的属性和方法：
+
+```
+clientWidth、clientHeight、clientTop、clientLeft
+offsetWidth、offsetHeight、offsetTop、offsetLeft
+scrollWidth、scrollHeight、scrollTop、scrollLeft
+scrollIntoView()、scrollIntoViewIfNeeded()
+getComputedStyle()
+getBoundingClientRect()
+scrollTo()
+```
+
 #### 重绘
-> 当页面中元素样式的改变并不影响它在文档流中的位置时（例如：color、background-color、visibility等），浏览器会将新样式赋予给元素并重新绘制它，这个过程称为重绘。
+
+> 当页面中元素样式的改变并不影响它在文档流中的位置时（例如：color、background-color、visibility 等），浏览器会将新样式赋予给元素并重新绘制它，这个过程称为重绘。
 
 #### 如何避免
+
 ##### for css：
-- 避免使用css表达式（calc）
+
+- 避免使用 css 表达式（calc）
 - 避免多层嵌套
-- 尽量在dom树的末端修改元素的class
-- 将动画效果应用到position属性为absolute或fixed的元素上。
-- 避免使用table布局
+- 尽量在 dom 树的末端修改元素的 class
+- 将动画效果应用到 position 属性为 absolute 或 fixed 的元素上。
+- 避免使用 table 布局
 
 ##### for js：
-- 避免频繁操作样式，最好一次都写在class里
-- 避免频繁操作dom，创建一个documentFragment，在它上面应用所有DOM操作，最后再把它添加到文档中。
-- display为none，不会触发回流和重绘
+
+- 避免频繁操作样式，最好一次都写在 class 里
+- 避免频繁操作 dom，创建一个 documentFragment，在它上面应用所有 DOM 操作，最后再把它添加到文档中。
+- display 为 none，不会触发回流和重绘
 - 对具有复杂动画的元素使用绝对定位，使它脱离文档流。否则会引起父元素及后续元素频繁回流。
-
-
-
-
 
 ### 浏览器缓存机制 关键字
