--- a/算法与数据结构/算法.md
+++ b/算法与数据结构/算法.md
@@ -1,3 +1,22 @@
+### 算法之间的优劣
+    - 时间维度
+        > 是指执行当前算法所消耗的时间，我们通常用「时间复杂度」来描述,用 T(n) 来定义。
+        常见的时间复杂度量级有：
+            常数阶O(1)
+            对数阶O(logN)
+            线性阶O(n)
+            线性对数阶O(nlogN)
+            平方阶O(n²)
+            立方阶O(n³)
+            K次方阶O(n^k)
+            指数阶(2^n)
+        上面从上至下依次的时间复杂度越来越大，执行的效率越来越低。
+
+    - 空间维度
+        > 是指执行当前算法需要占用多少内存空间，我们通常用「空间复杂度」来描述，用 S(n) 来定义。
+        空间复杂度比较常用的有：O(1)、O(n)、O(n²)
+
+
 ### 排序算法
     - 冒泡排序
         > 拿第一数与第二个数作比较，如果比它大，则交换位置
