update(浏览器):网络

--- a/浏览器/网络.md
+++ b/浏览器/网络.md
@@ -1,4 +1,4 @@
-### URL 的输入到浏览器解析的一系列事件
+### [URL 的输入到浏览器解析的一系列事件](https://juejin.cn/post/6844903832435032072#heading-60)
 
 1. DNS 解析
 
@@ -42,3 +42,4 @@
    - 回流、重绘
    - 如何优化
    - JS 解析
+   - Event Loop
