--- a/算法与数据结构/算法题目.md
+++ b/算法与数据结构/算法题目.md
@@ -1,5 +1,18 @@
+## 目录
+
+<br>
+
+- [两数之和](#两数之和)<br>
+- [无重复字符的最长子串](#无重复字符的最长子串)<br>
+
+<br>
+<hr>
+<br>
+
 ### 两数之和
-> 给定一个整数数组 nums 和一个目标值 target，请你在该数组中找出和为目标值的那 两个 整数，并返回他们的数组下标。你可以假设每种输入只会对应一个答案。但是，数组中同一个元素不能使用两遍。
+
+> 给定一个整数数组 nums  和一个目标值 target，请你在该数组中找出和为目标值的那   两个   整数，并返回他们的数组下标。你可以假设每种输入只会对应一个答案。但是，数组中同一个元素不能使用两遍。
+
 ```javaScript
 给定 nums = [2, 7, 11, 15], target = 9
 
@@ -8,11 +21,7 @@
 
 ```
 
-
-题解：
-    1.暴力破解
-        - 使用两层循环，外层循环计算当前元素与 target之间的差值，内层循环寻找该差值，若找到该差值，则返回两个元素的下标。
-        - 时间复杂度: O(n²）
+题解： 1.暴力破解 - 使用两层循环，外层循环计算当前元素与 target 之间的差值，内层循环寻找该差值，若找到该差值，则返回两个元素的下标。 - 时间复杂度: O(n²）
 
 ```javaScript
     /**
@@ -33,6 +42,7 @@ let twoSum = function(nums, target) {
 
 
 ```
+
     2.优化，利用数组减少查询时间
         - 在暴力法中，内层循环查找差值很浪费时间，那么如何减少查询时间呢？利用数组就可以减少查询时间。
         - 使用一层循环，每遍历到一个元素就计算该元素与 target 之间的差值 dif，然后以 dif 为下标到数组temp中寻找，如果 temp[dif] 有值(即不是 undefined)，则返回两个元素在数组 nums 的下标，如果没有找到，则将当前元素存入数组 temp 中(下标: nums[i],Value:i) 。
@@ -57,13 +67,14 @@ let twoSum = function(nums, target) {
 ```
 
 ### 无重复字符的最长子串
+
 > 给定一个字符串，请你找出其中不含有重复字符的 最长子串 的长度。
 
 ```javaScript
 示例1：
 
 输入: "abcabcbb"
-输出: 3 
+输出: 3
 解释: 因为无重复字符的最长子串是 "abc"，所以其长度为 3。
 
 示例2：
@@ -73,23 +84,20 @@ let twoSum = function(nums, target) {
 
 ```
 
-题解：
-    1.维护一个滑动窗口
-    - 遍历字符串，如果滑动窗口内存在该字符，则滑动窗口中这个字符串前面的全部删除，然后将这字符重新push就滑动窗口；如果滑动窗口内不存在改字符，直接将该字符push进滑动窗口。最后比较max和当前滑动窗口的长度，更新max；
-    - 时间复杂度O(n² * n)
+题解： 1.维护一个滑动窗口 - 遍历字符串，如果滑动窗口内存在该字符，则滑动窗口中这个字符串前面的全部删除，然后将这字符重新 push 就滑动窗口；如果滑动窗口内不存在改字符，直接将该字符 push 进滑动窗口。最后比较 max 和当前滑动窗口的长度，更新 max； - 时间复杂度 O(n² \* n)
 
 ```javascript
-    function lengthOfLongestSubstring(arr){
-        let slidingWindow =[],max=0;
-        for(let i=0;i<arr.length;i++){
-            let index = slidingWindow.indexOf(arr[i])
-            if(index!==-1){
-                slidingWindow.splice(0,index+1);
-            }
-            slidingWindow.push(arr[i]);
-            max= Math.max(slidingWindow.length, max) //与max比较比较当前滑动窗口的长度
-        }
-        return max
+function lengthOfLongestSubstring(arr) {
+  let slidingWindow = [],
+    max = 0;
+  for (let i = 0; i < arr.length; i++) {
+    let index = slidingWindow.indexOf(arr[i]);
+    if (index !== -1) {
+      slidingWindow.splice(0, index + 1);
     }
-
+    slidingWindow.push(arr[i]);
+    max = Math.max(slidingWindow.length, max); //与max比较比较当前滑动窗口的长度
+  }
+  return max;
+}
 ```
