--- a/算法与数据结构/算法.md
+++ b/算法与数据结构/算法.md
@@ -1,4 +1,5 @@
 ### 算法之间的优劣
+
     - 时间维度
         > 是指执行当前算法所消耗的时间，我们通常用「时间复杂度」来描述,用 T(n) 来定义。
         常见的时间复杂度量级有：
@@ -14,12 +15,23 @@
 
     - 空间维度
         > 是指执行当前算法需要占用多少内存空间，我们通常用「空间复杂度」来描述，用 S(n) 来定义。
-        空间复杂度比较常用的有：O(1)、O(n)、O(n²)
-
+        空间复杂度比较常用的有：
+            常数阶O(1)
+            线性阶O(n)
+            平方阶O(n²)
 
 ### 排序算法
+
     - 冒泡排序
         > 拿第一数与第二个数作比较，如果比它大，则交换位置
     - 选择排序
+        > 首先在未排序的序列中找到最小的（最大的），存放到排序序列的起始位置；
+        > 再从剩余的未排序的元素中继续寻找，然后放大已排序的队尾，直到全部排完。
     - 快速排序
+        > 从数列中找出一个基准
+        > 重新排列数列，所有元素比基准小的放前面，大的放后面，相同的放任意一边，在这个分区结束后，该基准就处于中间位置，这个成为分区操作
+        > 递归的把小于基准值元素的子数列和大于基准值元素的子数列排序
+
 ### 搜索算法
+
+
